fix: Banner component text color and spacing (#5956)
refactor: Banner text color and spacing

--- a/components/Common/Banner/index.module.css
+++ b/components/Common/Banner/index.module.css
@@ -5,12 +5,15 @@
     items-center
     justify-center
     gap-2
+    px-8
     py-3
     text-sm
     text-white;
 
   a {
-    @apply underline;
+    @apply w-fit
+      text-white
+      underline;
   }
 
   svg {
